hphp/test/zend7/Zend/tests/bug32660.php.expectf

Notice: %s
A Object
(
    [q] => 3
)

Notice: %s

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug32660.php on line 23